--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
 <h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 
 <% if current_admin %>
-  <p>Helo <%= current_admin.email %>!</p>
+  <p>Hello <%= current_admin.email %>!</p>
   <p>You have successfully authenticated</p>
   <p>You are <%= current_admin.role %>!</p>
   <%= link_to "Sign out", destroy_admin_session_path, method: :delete %>
