--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 
   <div class="field">
     <%= f.label :login %><br />
-    <%= f.text_field :login, autocomplete: "login" %>
+    <%= f.text_field :login %>
   </div>
 
   <div class="field">
