--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1><%= current_user&.login %></h1>
+<h1><%= current_user&.username %></h1>
 
 <% if current_user %>
   <p>Hello <%= current_user.email %>!</p>
@@ -10,3 +10,8 @@
   <%= link_to "Sign Up!", new_user_registration_path %>
   <%= link_to "Login!", new_user_session_path %>
 <% end %>
+
+<p> There is <%= @order&.count %>orders</p>
+
+<%= link_to "Orders", orders_path %> <br>
+<%= link_to "Users", users_path %>
