--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,17 +4,16 @@
   <p>Hello <%= current_user.email %>!</p>
   <p>You have successfully authenticated</p>
   <p>You are <%= current_user.role %>!</p>
+
+  <%= link_to "Orders", orders_path %> <br>
+
+  <% if current_user&.admin? %>
+    <%= link_to "Users", users_path %>
+  <% end %>
+
   <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
 <% else %>
-  <p>You are not signed in</p>
-  <%= link_to "Sign Up!", new_user_registration_path %>
+  <p>Please login to your account</p>
+  <%#= link_to "Sign Up!", new_user_registration_path %>
   <%= link_to "Login!", new_user_session_path %>
-<% end %>
-
-<p> There is <%= @order&.count %>orders</p>
-
-<%= link_to "Orders", orders_path %> <br>
-
-<% if current_user&.admin? %>
-  <%= link_to "Users", users_path %>
 <% end %>
