--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,58 @@
   </head>
 
   <body>
-    <%= yield %>
+
+  <header class="p-3 bg-warning text-black-bold">
+    <div class="container">
+      <nav class="d-flex flex-wrap align-items-center fw-bold">
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2  mb-md-0 justify-content-lg-start">
+          <li> <%= link_to 'Home', root_url, class: 'nav-link px-2 text-dark' %></li>
+        </ul>
+        <ul class="nav col-12 col-lg-auto mb-2 mb-md-0 justify-content-end">
+          <% if current_user %>
+            <li> <%= link_to 'Log out', "#", class: 'nav-link px-2 text-dark',
+                             data: {method: :delete}%></li>
+          <% else %>
+            <li> <%= link_to 'Sign in', "#", class: 'nav-link px-2 text-dark' %></li>
+            <li> <%= link_to 'Create account', new_user_path, class: 'nav-link px-2 text-dark' %></li>
+          <% end %>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="container-fluid">
+
+<!--    <nav class="nav flex-column">-->
+<!--      <a class="nav-link active" aria-current="page" href="#">Active</a>-->
+<!--      <a class="nav-link" href="#">Link</a>-->
+<!--      <a class="nav-link" href="#">Link</a>-->
+<!--      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+<!--    </nav>-->
+
+    <nav class="row">
+      <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+        <div class="position-sticky pt-3">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <%= link_to 'Home', root_url, class: "nav-link text-dark"%>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Orders", orders_path, class: "nav-link text-dark"%>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Users", users_path, class: "nav-link text-dark"%>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </nav>
+
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+
+      <%= yield %>
+
+    </main>
+  </div>
   </body>
 </html>
