products index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,9 @@
               <%= link_to "Orders", orders_path, class: "nav-link text-blue"%>
             </li>
             <li class="nav-item">
+              <%= link_to "Products", products_path, class: "nav-link text-blue"%>
+            </li>
+            <li class="nav-item">
               <%= link_to "Users", users_path, class: "nav-link text-b"%>
             </li>
           </ul>
