--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,8 @@
 
   <%= link_to "Orders", orders_path %> <br>
 
+  <%= link_to "Products", products_path %> <br>
+
   <% if current_user&.admin? %>
     <%= link_to "Users", users_path %>
   <% end %>
