--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -3,6 +3,8 @@
 <% @products.each do |product| %>
 
   <h2><%= product.title %>: </h2>
+
+  <%= image_tag(product.image.url, alt: 'Image') if product.image? %>
   <table>
     <thead>
     <tr>
@@ -22,25 +24,8 @@
     </tbody>
   </table>
 
-<!--  <h2>Products: </h2>-->
-<!--  <table>-->
-<!--    <thead>-->
-<!--    <tr>-->
-<!--      <th>title</th>-->
-<!--      <th>price</th>-->
-<!--      <th colspan="3"></th>-->
-<!--    </tr>-->
-<!--    </thead>-->
-
-    <%# order.products.each do |p| %>
-<!--      <tbody>-->
-<!--      <tr>-->
-<!--        <td><%#= p.title %></td>-->
-<!--        <td><%#= p.price %> $</td>-->
-    <%# end %>
-<!--    </tr>-->
-<!--    </tbody>-->
-<!--  </table>-->
-
-<!--  <p>Total price: <%#= order.total_price %> $</p>-->
+  <%= link_to 'Edit Product', edit_product_path(product)%>
 <% end %>
+
+<%= link_to 'New Product', new_product_path %>
+<%= link_to "Back", :back %>
