--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -11,7 +11,7 @@
 
   <div>
     <%= f.label :image %>
-    <%= f.file_field :images, multiple: true %>
+    <%= f.file_field :image %>
   </div>
 
   <div>
