--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -4,7 +4,7 @@
 
   <h2><%= product.title %>: </h2>
 
-  <%= image_tag(product.image.url, alt: 'Image') if product.image? %>
+  <%= image_tag(product.image.url, class: "product-show", alt: 'Image') if product.image? %>
   <table>
     <thead>
     <tr>
