--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,10 +53,11 @@
       </nav>
     </nav>
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 beige">
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 ">
 
+      <div class="container bg-white p-3">
       <%= yield %>
-
+      </div>
     </main>
   </div>
   </body>
