--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -21,7 +21,7 @@
     </tr>
 
     <tr>
-      <td><%= link_to 'Edit Product', edit_product_path(product)%></td>
+      <td colspan="4"><%= link_to 'Edit Product', edit_product_path(product)%></td>
     </tr>
     </tbody>
   <% end %>
