--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,47 +1,43 @@
-<h1>Orders:</h1>
+<div class="container-fluid p-0">
+  <div class="row">
+    <div class="col col-md-3 col-auto me-auto">
+      <h1 class="h3 mb-3">Orders</h1>
+    </div>
 
-<% @orders.each do |order| %>
-  <time> <%= order.formatted_created_at %> </time>
-
-  <h2>Customer information: </h2>
-  <table>
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Number</th>
-      <th colspan="3"></th>
-    </tr>
-    </thead>
-
-  <tbody>
-    <tr>
-      <td><%= order.user_name %></td>
-      <td><%= order.user_address %></td>
-      <td><%= order.user_number %></td>
-    </tr>
-  </tbody>
-  </table>
-
-  <h2>Products: </h2>
-  <table>
-    <thead>
-    <tr>
-      <th>title</th>
-      <th>price</th>
-      <th colspan="3"></th>
-    </tr>
-    </thead>
-
-    <% order.products.each do |p| %>
-      <tbody>
-      <tr>
-          <td><%= p.title %></td>
-          <td><%= p.price %> $</td>
-        <% end %>
-      </tr>
-    </tbody>
-  </table>
-
-  <p>Total price: <%= order.total_price %> $</p>
-<% end %>
+  </div>
+  <div class="card">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+            <tr>
+              <th>#</th>
+              <th>Date/Time of creation</th>
+              <th>Status</th>
+              <th>Name</th>
+              <th>Address</th>
+              <th>Number</th>
+              <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+              <% @orders.each do |order| %>
+                <tr>
+                  <td><%= order.id %></td>
+                  <td><%= order.formatted_created_at %></td>
+                  <td>Status</td>
+                  <td><%= order.user_name %></td>
+                  <td><%= order.user_address %></td>
+                  <td><%= order.user_number %></td>
+                  <td><%= link_to 'Show Order', order_path(order)%></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <%#= render "admin_panel/partials/pagy", pagy: @pagy %>
+</div>
