--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -18,6 +18,7 @@
               <th>Name</th>
               <th>Address</th>
               <th>Number</th>
+              <th>Total</th>
               <th>Actions</th>
             </tr>
             </thead>
@@ -30,6 +31,7 @@
                   <td><%= order.user_name %></td>
                   <td><%= order.user_address %></td>
                   <td><%= order.user_number %></td>
+                  <td><%= order.total_price %></td>
                   <td><%= link_to 'Show Order', order_path(order)%></td>
                 </tr>
               <% end %>
